--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ unity-environment.log
 UnityEngine*
 *.aspx
 continuous_navigation_project/Reacher_Twenty_Linux_NoVis/Reacher_Data/*
+/collaboration_and_competition_project/Tennis_Linux/Tennis_Data/
+/collaboration_and_competition_project/Tennis_Linux/Tennis.x86_64
+/collaboration_and_competition_project/Tennis_Linux/Tennis.x86
+/collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis_Data/
+/collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis.x86
+/collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis.x86_64
