--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ continuous_navigation_project/Reacher_Twenty_Linux_NoVis/Reacher_Data/*
 /collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis_Data/
 /collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis.x86
 /collaboration_and_competition_project/Tennis_Linux_NoVis/Tennis.x86_64
+/continuous_navigation_project/Reacher_Twenty_Linux_NoVis/Reacher_Data/
+/continuous_navigation_project/Reacher_Twenty_Linux_NoVis/Reacher.x86
+/continuous_navigation_project/Reacher_Twenty_Linux_NoVis/Reacher.x86_64
+/continuous_navigation_project/Reacher_One_Linux_NoVis/Reacher.x86_64
+/continuous_navigation_project/Reacher_One_Linux_NoVis/Reacher.x86
+/continuous_navigation_project/Reacher_One_Linux_NoVis/Reacher_Data/
